<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:strokeWidth="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/header"
            android:textColor="@color/rpColor"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/subHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/subColor"
        app:strokeColor="@color/rpColor"
        app:strokeWidth="1.5dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <TextView
            android:id="@+id/subHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/limelight"
            android:text="@string/subHeader"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="@+id/welcome"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/welcome"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />
    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/alc_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/btColor"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/alc"
        android:textSize="16sp"
        android:typeface="monospace"
        app:cornerRadius="15dp"
        app:strokeColor="@color/rpColor"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_web_white_24dp"
        app:rippleColor="@color/rpColor"
        app:layout_constraintBottom_toTopOf="@+id/copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHead"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/myProfileBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/btColor"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/myProfile"
        android:textSize="18sp"
        android:typeface="monospace"
        app:cornerRadius="15dp"
        app:strokeColor="@color/rpColor"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_person_white_24dp"
        app:rippleColor="@color/rpColor"
        app:layout_constraintBottom_toTopOf="@+id/copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHead"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/copy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/copy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>